# RemoteCaptury

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  README.md  RemoteCaptury.cpp  RemoteCaptury.h  RemoteCapturyPython.cpp  license.txt  testcallback.py
.github/workflows/: publish-pypi.yml
captury/: PublicStructs.h
examples/: callback.cpp  curves.cpp  polling.cpp  polling.py  search.cpp
python/: .gitignore  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  example_recorder.py  prepare_build.sh  pyproject.toml  setup.py  test_remotecaptury.py
python/remotecaptury/: __init__.py  interface.py
python/src/: bindings.cpp
